<resources>
    <!-- activity_main.xml -->
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search" translatable="false">Поиск</string>
    <string name="media" translatable="false">Медиатека</string>
    <string name="settings" translatable="false">Настройки</string>

    <!-- activity_settings.xml -->
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="support" translatable="false">Написать в поддержку</string>
    <string name="agreement" translatable="false">Пользовательское соглашение</string>
    <!-- SettingsActivity.kt / Поделится приложением -->
    <string name="share_text" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <!-- SettingsActivity.kt / Написать в поддержку -->
    <string name="send_mail" translatable="false">vvkarkov@yandex.ru</string>
    <string name="send_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="send_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <!-- SettingsActivity.kt/ Пользовательское соглашение -->
    <string name="practicum_offer" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <!-- activity_search -->
    <string name="input_hint" translatable="false">Поиск</string>
    <string name="fonts" translatable="false">Шрифты</string>
    <string name="composition" translatable="false">Композиция</string>
    <string name="artist_name" translatable="false">Артист</string>
    <string name="track_time" translatable="false">00:00</string>
    <string name="net_error" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_error" translatable="false">Ничего не нашлось</string>
    <string name="download_message" translatable="false">Подождите. Идёт загрузка треков ...</string>
    <string name="update_button" translatable="false">Обновить</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="histoty_title" translatable="false">Вы искали</string>

    <string name="i_tune_base_url" translatable="false">https://itunes.apple.com</string>

    <string name="audioplayer" translatable="false">Аудиоплеер</string>
    <string name="duration" translatable="false">Длительность</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="year" translatable="false">Год</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="country" translatable="false">Страна</string>
    <string name="unknown" translatable="false">Неизвестный</string>

</resources>