<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.PlaylistMaker"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView style="@style/mainTitleStyle"
        android:text="@string/app_name"
        android:textColor="@color/white"
        />
    <Button style="@style/mainButtonStyle"
        android:layout_marginTop="40dp"
        android:id="@+id/button_search"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        />
    <Button style="@style/mainButtonStyle"
        android:id="@+id/button_media"
        android:text="@string/media"
        app:icon="@drawable/ic_media"
        />
    <Button style="@style/mainButtonStyle"
        android:id="@+id/button_settings"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        android:layout_marginBottom="28dp"
        />
</LinearLayout>
