<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button style="@style/returnButtonStyle"
        android:id="@+id/return_from_player"
        android:text="@string/audioplayer"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0667"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9333"
        />

    <ImageView
        android:id="@+id/artworkUrl512х512"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_placeholder"
        android:layout_marginTop="@dimen/artwork_margin"
        android:layout_marginBottom="@dimen/artwork_margin"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintTop_toBottomOf="@id/return_from_player"
        app:layout_constraintBottom_toTopOf="@+id/track_name_ap"
        app:layout_constraintDimensionRatio="w,1:1"
        />

    <TextView style="@style/TrackNameAPStyle"
        android:id="@+id/track_name_ap"
        android:text="@string/composition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.52" />
    />

    <TextView style="@style/ArtistAPStyle"
        android:id="@+id/artist_ap"
        android:text="@string/artist_name"
        app:layout_constraintTop_toBottomOf="@id/track_name_ap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.032" />
    />

    <!-- При запуске экрана аудиоплеера вместо кнопки воспроизведение/пауза -->
    <!-- до готовности трека к воспроизведению отображается прогресс-бар    -->

    <ProgressBar android:id="@+id/progressBarPlayer"
        android:visibility="visible"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:indeterminateTint="?attr/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@id/artist_ap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.1385" />

    <ImageView
        android:id="@+id/circle_button_play"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/ic_circle_button_play"
        app:layout_constraintTop_toBottomOf="@id/artist_ap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.1385" />

    <ImageView
        android:id="@+id/circle_button_pause"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/ic_circle_button_pause"
        app:layout_constraintTop_toBottomOf="@id/artist_ap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.1385" />

    <ImageView
        android:id="@+id/circle_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/ic_circle_button_add"
        app:layout_constraintTop_toTopOf="@id/circle_button_play"
        app:layout_constraintBottom_toBottomOf="@id/circle_button_play"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        />

    <ImageView
        android:id="@+id/circle_button_heart"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/ic_circle_button_heart"
        app:layout_constraintTop_toTopOf="@id/circle_button_play"
        app:layout_constraintBottom_toBottomOf="@id/circle_button_play"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        />

    <ImageView
        android:id="@+id/circle_button_heart_selected"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?attr/ic_circle_button_heart_selected"
        app:layout_constraintTop_toTopOf="@id/circle_button_play"
        app:layout_constraintBottom_toBottomOf="@id/circle_button_play"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        />

    <TextView style="@style/TimeAPStyle"
        android:id="@+id/playback_time"
        android:text="0:00"
        app:layout_constraintTop_toBottomOf="@id/circle_button_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline"
        app:layout_constraintStart_toStartOf="@id/start_guideline"
        app:layout_constraintVertical_bias="0.0555" />
    />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_infoline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04444"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_infoline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95556"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_infoline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98678"
        />

    <TextView style="@style/InfoAPStyle"
        android:id="@+id/info1"
        android:text="@string/duration"
        android:layout_marginTop="21dp"
        app:layout_constraintStart_toStartOf="@id/start_infoline"
        app:layout_constraintTop_toBottomOf="@id/playback_time"
        app:layout_constraintBottom_toTopOf="@id/info2"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <TextView style="@style/InfoAPStyle"
        android:id="@+id/info2"
        android:text="@string/album"
        app:layout_constraintStart_toStartOf="@id/start_infoline"
        app:layout_constraintTop_toBottomOf="@id/info1"
        app:layout_constraintBottom_toTopOf="@id/info3"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <TextView style="@style/InfoAPStyle"
        android:id="@+id/info3"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@id/start_infoline"
        app:layout_constraintTop_toBottomOf="@id/info2"
        app:layout_constraintBottom_toTopOf="@id/info4"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <TextView style="@style/InfoAPStyle"
        android:id="@+id/info4"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@id/start_infoline"
        app:layout_constraintTop_toBottomOf="@id/info3"
        app:layout_constraintBottom_toTopOf="@id/info5"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <TextView style="@style/InfoAPStyle"
        android:id="@+id/info5"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@id/start_infoline"
        app:layout_constraintTop_toBottomOf="@id/info4"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_infoline"
        app:layout_constraintVertical_chainStyle="spread"
        />
    <TextView style="@style/ContAPStyle"
        android:id="@+id/cont1"
        android:text="0:00"
        app:layout_constraintEnd_toEndOf="@id/end_infoline"
        app:layout_constraintStart_toEndOf="@id/info1"
        app:layout_constraintTop_toTopOf="@id/info1"
        />
    <TextView style="@style/ContAPStyle"
        android:id="@+id/cont2"
        android:text="@string/unknown"
        app:layout_constraintEnd_toEndOf="@id/end_infoline"
        app:layout_constraintStart_toEndOf="@id/info2"
        app:layout_constraintTop_toTopOf="@id/info2"
        />
    <TextView style="@style/ContAPStyle"
        android:id="@+id/cont3"
        android:text="2000"
        app:layout_constraintEnd_toEndOf="@id/end_infoline"
        app:layout_constraintStart_toEndOf="@id/info3"
        app:layout_constraintTop_toTopOf="@id/info3"
        />
    <TextView style="@style/ContAPStyle"
        android:id="@+id/cont4"
        android:text="@string/unknown"
        app:layout_constraintEnd_toEndOf="@id/end_infoline"
        app:layout_constraintStart_toEndOf="@id/info4"
        app:layout_constraintTop_toTopOf="@id/info4"
        />
    <TextView style="@style/ContAPStyle"
        android:id="@+id/cont5"
        android:text="@string/unknown"
        app:layout_constraintEnd_toEndOf="@id/end_infoline"
        app:layout_constraintStart_toEndOf="@id/info5"
        app:layout_constraintTop_toTopOf="@id/info5"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
